[package]
name = "sateryte"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
rhai = "1.5.0"
ron = "0.7"
rand = "0.8.5"
once_cell = "1.10.0"
bevy = "0.6.1"
crossterm = "*"
bevy_crossterm = { git = "https://github.com/wakame-tech/bevy_crossterm", branch = "fix/migrate-bevy-0.6" }
terminal_size = "0.1.17"
itertools = "0.10.3"